Get the basic dance counter web UX working
Remaining work:

Clean this up both code-wise and UX-wise
At minimum cache the last several tempo/dance lookups
Think about how to add back in some of the stuff that was part of the phone versions

--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -92,3 +92,18 @@ table.songlist
     font-size: 1.2em;
 }
 
+.calculator
+{
+    display: inline;
+    font-size: large;
+    padding: 6px 12px;
+    color: #fff;
+    background-color: #5bc0de;
+    border-color: #46b8da;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    border: 1px solid transparent;
+    border-radius: 3px;
+}
