--- a/DanceCalc/m4d/Views/Home/Counter.cshtml
+++ b/DanceCalc/m4d/Views/Home/Counter.cshtml
@@ -2,12 +2,49 @@
     ViewBag.Title = "Counter";
 }
 
-<button id='count' type=button>Count</button>
-<p><span id='time'>0</span> elapsed millis</p>
-<p><span id='total'>0</span> clicks total</p>
-<p><span id='avg'>0</span> milliseconds per click</p>
-<p><span id='rate'>0</span> clicks per minute</p>
-<button id='reset' type=button>Reset</button>
+<div class="container">
+    <div class="row">&nbsp</div>
+    <div class="row">
+        <button id='count' type=button class="btn btn-lg btn-primary btn-block">Count</button>
+    </div>
+    <div class="row">&nbsp</div>
+    <div class="row">
+        <span id="tempo" class="calculator">0.0</span>
+        <div class="btn-group btn-group-xs" data-toggle="buttons">
+            <label id="mt1" class="btn btn-info">
+                <input name="meter" id="meter1" value="1" type="radio">BPM
+            </label>
+            <label id="mt2" class="btn btn-info">
+                <input name="meter" id="meter2" value="2" type="radio">2/4
+            </label>
+            <label id="mt3" class="btn btn-info">
+                <input name="meter" id="meter3" value="3" type="radio">3/4
+            </label>
+            <label id="mt4" class="btn btn-info active">
+                <input name="meter" id="meter4" value="4" type="radio" checked>4/4
+            </label>
+        </div>
+    </div>
+
+    <div class="row">
+        @if (User.IsInRole("showDiagnostics"))
+        {
+            <p><span id='time'>0</span> elapsed millis</p>
+            <p><span id='total'>0</span> clicks total</p>
+            <p><span id='avg'>0</span> milliseconds per click</p>
+            <p><span id='rate'>0</span> clicks per minute</p>
+        }
+    </div>
+
+    <div class="row">
+        <h2>Dances</h2>
+        <div id="dances" class="list-group"></div>
+    </div>
+
+    <div class="row">
+        <button id='reset' type=button class="btn-sm btn-block">Reset</button>
+    </div>
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
