--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -96,14 +96,22 @@ table.songlist
 {
     display: inline;
     font-size: large;
-    padding: 6px 12px;
-    color: #fff;
-    background-color: #5bc0de;
+    font-weight:bold;
+    padding: 3px 6px;
+    color: #5bc0de;
+    background-color: #fff;
     border-color: #46b8da;
     line-height: 1.42857143;
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
-    border: 1px solid transparent;
+    border: 4px solid;
     border-radius: 3px;
 }
+
+#mt
+{
+    width:100%;
+}
+
+.row-buffer { margin-top:15px; }
