--- a/DanceCalc/m4d/Views/Home/Counter.cshtml
+++ b/DanceCalc/m4d/Views/Home/Counter.cshtml
@@ -18,7 +18,7 @@
             <li><a id="mt4" href="#">4/4 MPM</a></li>
         </ul>
     </div>
-    <a href="#" id="help" class="btn btn-default col-xs-4">Help</a>
+    @Html.ActionLink("Help", "CounterHelp", null, new { @class = "btn btn-default col-xs-4", role = "button" })
 </div>
 
 @*
