Rework home-page to be a list of dances...

--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Dances", "Index", "Home")</li>
                     <li>@Html.ActionLink("Songs", "Index", "Song")</li>
                     <li>@Html.ActionLink("Counter", "Counter", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
