Initial run at batching up xbox music matching

--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -207,9 +207,10 @@
     @if (canEdit)
     {
         <input type="hidden" name="filter" value="@ViewBag.SongFilter" />
-        <input type="submit" name="action" value="Merge" />
-        <input type="submit" name="action" value="Delete" />
-        @Html.ActionLink("Add New Song", "Create");
+        <input type="submit" name="action" value="Merge" class="btn"/>
+        <input type="submit" name="action" value="Delete" class="btn" />
+        @Html.ActionLink("Add New Song", "Create", null, new { @class = "btn btn-default", role = "button" });
+        @Html.ActionLink("XBox Match", "BatchXbox", new { filter = ViewBag.SongFilter }, new { @class = "btn btn-default", role="button"});
     }    
 </p>
 }
