--- a/DanceCalc/m4d/Views/Song/XboxSearch.cshtml
+++ b/DanceCalc/m4d/Views/Song/XboxSearch.cshtml
@@ -33,53 +33,55 @@ else {
         
         foreach (var track in items)
         {
-            string tracklink = @track.Link + "?action=addtocollection";
-            string altId = null;
-            <div>
-                @if (track.ImageUrl != null)
-                {
-                    <img src="@track.ImageUrl" height="50" width="50"/>
-                }
-                <b>Name:</b>@track.Name<br />
-                <b>Album:</b>@track.Album.Name<br />
-                <b>Artist:</b>@track.Artists[0].Artist.Name<br />
-                <b>Link:</b><a href="@track.Link" target="bogus">@tracklink</a><br />
-                <b>Id:</b>@track.Id<br />
-                @if (@track.OtherIds != null)
-                {
-                    try
+            if (ViewBag.TrackId == null || string.Equals(ViewBag.TrackId,track.Id))
+            { 
+                string tracklink = @track.Link + "?action=addtocollection";
+                string altId = null;
+                <div>
+                    @if (track.ImageUrl != null)
                     {
-                        altId = tracks.OtherIds.music_amg;                        
-                        <b>OtherId:</b>@altId<br />
+                        <img src="@track.ImageUrl" height="50" width="50"/>
                     }
-                    catch (Microsoft.CSharp.RuntimeBinder.RuntimeBinderException)
-                    {  
-                    }
-                }            
-                <b>ReleaseDate:</b>@track.ReleaseDate<br />
-                <b>Duration:</b>@track.Duration<br />
-                <b>TrackNumber:</b>@track.TrackNumber<br />
-                @if (track.Genres != null)
-                { 
-                    <b>Genre(s):</b>
-                    foreach(string genre in track.Genres)
+                    <b>Name:</b>@track.Name<br />
+                    <b>Album:</b>@track.Album.Name<br />
+                    <b>Artist:</b>@track.Artists[0].Artist.Name<br />
+                    <b>Link:</b><a href="@track.Link" target="bogus">@tracklink</a><br />
+                    <b>Id:</b>@track.Id<br />
+                    @if (@track.OtherIds != null)
                     {
-                        <text>@genre</text>
-                        <text>&nbsp;</text>
+                        try
+                        {
+                            altId = tracks.OtherIds.music_amg;                        
+                            <b>OtherId:</b>@altId<br />
+                        }
+                        catch (Microsoft.CSharp.RuntimeBinder.RuntimeBinderException)
+                        {  
+                        }
+                    }            
+                    <b>ReleaseDate:</b>@track.ReleaseDate<br />
+                    <b>Duration:</b>@track.Duration<br />
+                    <b>TrackNumber:</b>@track.TrackNumber<br />
+                    @if (track.Genres != null)
+                    { 
+                        <b>Genre(s):</b>
+                        foreach(string genre in track.Genres)
+                        {
+                            <text>@genre</text>
+                            <text>&nbsp;</text>
+                        }
+                        <br />                
                     }
-                    <br />                
-                }
 
-
-                @using (Html.BeginForm("ChooseXbox","Song",new { songId = Model.SongId, name = track.Name, album = track.Album.Name, artist = track.Artists[0].Artist.Name, trackId = track.Id, alternateId = altId, duration = track.Duration, trackNum = track.TrackNumber, genre=track.Genres[0], filter=ViewBag.SongFilter }))
-                {
-                    @Html.AntiForgeryToken()
-                    <input type="submit" value="CHOOSE" />
-                }
-                <br/>
-                <br />
-                <br />
-            </div>
+                    @using (Html.BeginForm("ChooseXbox","Song",new { songId = Model.SongId, name = track.Name, album = track.Album.Name, artist = track.Artists[0].Artist.Name, trackId = track.Id, alternateId = altId, duration = track.Duration, trackNum = track.TrackNumber, genre=track.Genres[0], filter=ViewBag.SongFilter }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <input type="submit" value="CHOOSE" />
+                    }
+                    <br/>
+                    <br />
+                    <br />
+                </div>
+            }
         }
     }
 
