--- a/DanceCalc/m4d/Views/Song/XboxSearch.cshtml
+++ b/DanceCalc/m4d/Views/Song/XboxSearch.cshtml
@@ -47,7 +47,7 @@ else {
                     <b>Artist:</b>@track.Artists[0].Artist.Name<br />
                     <b>Link:</b><a href="@track.Link" target="bogus">@tracklink</a><br />
                     <b>Id:</b>@track.Id<br />
-                    @if (@track.OtherIds != null)
+                    @if (track.OtherIds != null)
                     {
                         try
                         {
