--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -210,7 +210,8 @@
         <input type="submit" name="action" value="Merge" class="btn"/>
         <input type="submit" name="action" value="Delete" class="btn" />
         @Html.ActionLink("Add New Song", "Create", null, new { @class = "btn btn-default", role = "button" });
-        @Html.ActionLink("XBox Match", "BatchXbox", new { filter = ViewBag.SongFilter, count=500 }, new { @class = "btn btn-default", role="button"});
+        @Html.ActionLink("XBox Match", "BatchMusicService", new { filter = ViewBag.SongFilter, count = 10 }, new { @class = "btn btn-default", role="button"});
+        @Html.ActionLink("ITunes Match", "BatchMusicService", new { filter = ViewBag.SongFilter, count = 10 }, new { @class = "btn btn-default", role = "button" });
     }    
 </p>
 }
