--- a/DanceCalc/m4d/Views/Song/BatchMusicService.cshtml
+++ b/DanceCalc/m4d/Views/Song/BatchMusicService.cshtml
@@ -29,5 +29,5 @@
 {
     @Html.ActionLink("10", "BatchMusicService", new { filter = ViewBag.SongFilter, type=ViewBag.SearchType, count = 10 }, new { @class = "btn btn-default", role = "button" });
     @Html.ActionLink("100", "BatchMusicService", new { filter = ViewBag.SongFilter, type=ViewBag.SearchType, count = 100 }, new { @class = "btn btn-default", role = "button" });
-    @Html.ActionLink("500", "BatchMusicService", new { filter = ViewBag.SongFilter, type = ViewBag.SearchType = "X", count = 500 }, new { @class = "btn btn-default", role = "button" });
+    @Html.ActionLink("500", "BatchMusicService", new { filter = ViewBag.SongFilter, type = ViewBag.SearchType, count = 500 }, new { @class = "btn btn-default", role = "button" });
 }
