--- a/DanceCalc/m4d/Views/Song/BatchMusicService.cshtml
+++ b/DanceCalc/m4d/Views/Song/BatchMusicService.cshtml
@@ -27,7 +27,7 @@
 
 @if (!ViewBag.Completed)
 {
-    @Html.ActionLink("10", "BatchMusicService", new { filter = ViewBag.SongFilter, type=ViewBag.SearchType, count = 10 }, new { @class = "btn btn-default", role = "button" });
-    @Html.ActionLink("100", "BatchMusicService", new { filter = ViewBag.SongFilter, type=ViewBag.SearchType, count = 100 }, new { @class = "btn btn-default", role = "button" });
-    @Html.ActionLink("500", "BatchMusicService", new { filter = ViewBag.SongFilter, type = ViewBag.SearchType, count = 500 }, new { @class = "btn btn-default", role = "button" });
+    @Html.ActionLink("10", "BatchMusicService", new { filter = ViewBag.SongFilter, type=ViewBag.SearchType, options=ViewBag.Options, count = 10 }, new { @class = "btn btn-default", role = "button" });
+    @Html.ActionLink("100", "BatchMusicService", new { filter = ViewBag.SongFilter, type = ViewBag.SearchType, options = ViewBag.Options, count = 100 }, new { @class = "btn btn-default", role = "button" });
+    @Html.ActionLink("500", "BatchMusicService", new { filter = ViewBag.SongFilter, type = ViewBag.SearchType, options = ViewBag.Options, count = 500 }, new { @class = "btn btn-default", role = "button" });
 }
