Add in the ability to backup/restore the service lookup history

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -21,6 +21,7 @@
 <h3> Initializiation Tasks</h3>
 <ul>
     <li>@Html.ActionLink("Backup the Database", "BackupDatabase")</li>
+    <li>@Html.ActionLink("Backup the Database (with lookup history)", "BackupDatabase", new {useLookupHistory = "true" })</li>
     <li>@Html.ActionLink("Update Purchase Info", "UpdatePurchase")</li>
     <li>@Html.ActionLink("Update Title Hashes", "UpdateTitleHash")</li>
     @if (User.IsInRole("dbAdmin"))
