--- a/DanceCalc/m4d/Views/Admin/UploadTempoes.cshtml
+++ b/DanceCalc/m4d/Views/Admin/UploadTempoes.cshtml
@@ -1,14 +1,13 @@
 ﻿@{
     ViewBag.Title = "Upload Tempoes";
+    int matches = 0;
+    int conflicts = 0;
 }
 
 @model IEnumerable<m4d.ViewModels.LocalMerger>
 
 <h2>UploadTempoes</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table table-striped">
     <tr>
         <th>
@@ -24,6 +23,9 @@
             Album
         </th>
         <th>
+            Track
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Left.Tempo)
         </th>
         <th>
@@ -35,23 +37,36 @@
     {
         <tr>
             <td>
-                @Html.ActionLink(item.Left.SongId.ToString(), "Details", new { id = item.Left.SongId })
+                @{
+                    string color = null;
+                    if (item.Conflict)
+                    {
+                        color = "red";
+                        conflicts += 1;
+                    }
+                    else
+                    {
+                        color = "green";
+                        matches += 1;
+                    }
+                }
+                <span style="color:@color">@item.MatchType.ToString()</span>
             <td>
                 @Html.DisplayFor(modelItem => item.Left.Title)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Left.Artist)
             </td>
-            <td>
-                @if (item.Left.HasAlbums)
-                {
-                    @Html.DisplayFor(modelItem => item.Left.Albums[0].Name)
-                }
-                else
-                {
-                    <text>&nbsp;</text>
-                }
-            </td>
+            @if (item.Left.HasAlbums)
+            {
+                <td>@Html.DisplayFor(modelItem => item.Left.Albums[0].Name)</td>
+                <td>@Html.DisplayFor(modelItem => item.Left.Albums[0].Track)</td>
+            }
+            else
+            {
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+            }
             <td>
                 @Html.DisplayFor(modelItem => item.Left.Tempo)
             </td>
@@ -60,23 +75,25 @@
             </td>
         </tr>
         <tr>
-            <td>&nbsp;</td>
+            <td>
+                @Html.ActionLink(item.Right.SongId.ToString(), "Details", "Song", new { id = item.Right.SongId }, new { target="_blank"})
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Right.Title)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Right.Artist)
             </td>
-            <td>
-                @if (item.Right.HasAlbums)
-                {
-                    @Html.DisplayFor(modelItem => item.Right.Albums[0].Name)
-                }
-                else
-                {
-                    <text>&nbsp;</text>
-                }
-            </td>
+            @if (item.Right.HasAlbums)
+            {
+                <td>@Html.DisplayFor(modelItem => item.Right.Albums[0].Name)</td>
+                <td>@Html.DisplayFor(modelItem => item.Right.Albums[0].Track)</td>
+            }
+            else
+            {
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+            }
             <td>
                 @Html.DisplayFor(modelItem => item.Right.Tempo)
             </td>
@@ -86,3 +103,14 @@
         </tr>
     }
 </table>
+
+<h3>Matches = @matches</h3>
+<h3>Conflicts = @conflicts</h3>
+
+@using (Html.BeginForm("UploadTempoes","Admin",new {commit=true, fileId=@ViewBag.FileId}))
+{
+    @Html.AntiForgeryToken()
+    <p>
+        <input type="submit" value="Commit" class="btn btn-default"/>
+    </p>
+}
